<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        app:backgroundTint="#FF5722"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_PW" />

    <EditText
        android:id="@+id/input_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="#646161"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/navigate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:backgroundTint="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <EditText
        android:id="@+id/input_PW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_ID"
        android:textColorHint="#646161"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="360dp"
        android:layout_height="130dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/input_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>